--- a/src/content/category/category.css
+++ b/src/content/category/category.css
@@ -4,82 +4,214 @@
 .category {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: flex-start;
     position: relative;
     
     width: 100%;
-    height: auto;
+    height: var(--height-category);
     margin: 0;
-    padding-left: var(--padding-content);
-    gap: var(--gap-category);
-    
+    margin-bottom: var(--margin-bottom-content);
+    padding: 0;
+    padding-top: var(--padding-top-content);
+    gap: var(--gap-category);   
     box-sizing: border-box;
 }
 
-.category-section-container {
+.category-slider-header {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    
+
     width: 100%;
-    height: var(--height-category-section-container);
+    height: var(--height-category-slider-header);
     margin: 0;
     padding: 0;
-    gap: var(--gap-category-section-container); 
-    box-sizing: border-box;   
+    padding-left: var(--padding-content);
+    padding-right: var(--padding-content);
+    box-sizing: border-box;
 }
 
-.category-section-header {
+.category-slider-body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    z-index: var(--z-index-content-header);
-    
-    width: 100%;
-    height: var(--height-category-section-header);
-    margin: 0;
-    padding: 0;
-    font-size: var(--font-size-hero-button-text);
-    font-weight: var(--font-weight-hero-button-text);
-
-    color: var(--color-font);
-    font-size: var(--font-size-category);
-}
-
-.category-section-slider {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    
-    width: 100%;
-    height: var(--height-category-section-slider);
-    margin: 0;
-    padding: 0;
-    gap: var(--gap-category-section-slider);
-}
-
-.category-section-slider-item {
     position: relative;
 
-    width: var(--width-category-section-slider-item);
-    height: var(--height-category-section-slider-item);
+    width: 100%;
+    height: var(--height-category-slider-body);
+    margin: 0;
+    padding: 0;
+    padding-left: var(--padding-content);
+    padding-right: var(--padding-content);
+    box-sizing: border-box;
+}
+
+.category-slider-header-text {
+    width: auto;
+    height: var(--height-category-slider-header);
+    margin: 0;
+    padding: 0;
+    
+    color: var(--color-font);
+    font-size: var(--font-size-category-slider-header-text);
+    font-weight: var(--font-weight-category-slider-header-text);
+}
+
+.category-slider-page-indicator {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: auto;
+    height: var(--height-category-slider-page-indicator);
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-category-slider-page-indicator)
+}
+
+.category-slider-page-indicator-element {
+    width: var(--width-category-slider-page-indicator-element);
+    height: var(--height-category-slider-page-indicator);
+    margin: 0;
+    padding: 0;
+
+    background-color: var(--color-category-slider-page-indicator-element);
+}
+
+.category-slider-page-indicator-element.active {
+    background-color: var(--color-category-slider-page-indicator-element-active);
+}
+
+
+.category-slider-forward-button-container, .category-slider-backward-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: var(--z-index-category-slider-button);
+    top: 0;
+    bottom: 0;
+
+    width: var(--padding-content);
+    margin: 0;
+    padding: 0;
+
+    background-color: var(--color-category-slider-button-container);
+    border: 0;
+    border-radius: 5%;
+}
+
+.category-slider-backward-button-container {
+    left: 0%;
+}
+
+.category-slider-forward-button-container {
+    right: 0%;
+}
+
+.category-slider-forward-button, .category-slider-backward-button {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+
+    background-color: transparent;
+    border: 0;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.category-slider-forward-button img, .category-slider-backward-button img {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+
+    border: 0;
+}
+
+.category-slider-forward-button-container:hover .category-slider-forward-button, 
+.category-slider-backward-button-container:hover .category-slider-backward-button{
+    opacity: 1;
+    visibility: visible;
+}
+
+.category-slider-track {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: 100%;
+    height: var(--height-category-slider-body);
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-category-slider-track);
+
+    transform: 'transform 0.5s ease';
+}
+
+.category-slider-card-group {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: 100%;
+    height: var(--height-category-slider-body);
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-category-slider-track);
+}
+
+
+.category-slider-card {
+    position: relative;
+
+    width: var(--width-category-slider-card);
+    height: var(--height-category-slider-card);
 
     cursor: pointer;
 }
 
-.category-section-slider-item img{
-    width: 100%;
-    height: auto;
-    
+.category-slider-card img{
+    width: var(--width-category-slider-card);
+    height: var(--height-category-slider-card);
+
     border-radius: 5%;
 }
 
-.category-section-slider-item:hover .slider-inner-item {
+.category-slider-card:hover .slider-inner-card {
     z-index: var(--z-index-content-inner-card);
     opacity: 1;
     visibility: visible;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
