--- a/src/hero/hero.css
+++ b/src/hero/hero.css
@@ -17,16 +17,14 @@
 
 .poster {
     position: absolute;
-    /* z-index: 1; */
-
+    
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .overlay {
     position: absolute;
-    /* z-index: 2; */
-
+    
     width: 100%;
     height: 100%;
 
@@ -39,8 +37,7 @@
     justify-content: center;
     align-items: flex-start;
     position: absolute;
-    /* z-index: 3; */
-
+    
     width: 100%;
     height: 100%;
     margin: 0;
