--- a/src/content/content.css
+++ b/src/content/content.css
@@ -1,5 +1,7 @@
 @import url(./category/category.css);
 @import url(./rank/rank.css);
+@import url(./slider/slider.css);
+@import url(./card/card.css);
 
 /* ================================================================= */
 /* Content-Common */
@@ -11,121 +13,6 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    padding-bottom: 150px;
-    gap: var(--gap-content);
-
-    overflow: hidden;
-}
-
-.slider-inner-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-
-    width: var(--width-slider-inner-item);
-    height: var(--height-slider-inner-item);
-    margin: 0;
-    padding: 0;
-    border-radius: 5%;
-    box-shadow: 0 0 20px rgba(50, 50, 50, 0.5);
-    box-sizing: border-box;
     
-    opacity: 0;
-    visibility: hidden;
     overflow: hidden;
-    z-index: 10;
-}
-
-.slider-inner-card img{
-    width: var(--width-slider-inner-item);
-    height: auto;
-    border-radius: 0;
-}
-
-.slider-inner-card-canvas {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    width: var(--width-slider-inner-item);
-    height: auto;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-    background-color: var(--color-background);
-}
-
-.button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-
-    width: var(--width-slider-inner-item);
-    height: auto;
-    margin: 0;
-    padding: 0;
-    padding-top: var(--padding-slider-inner-item-canvas);
-    padding-left: var(--padding-slider-inner-item-canvas);
-    padding-right: var(--padding-slider-inner-item-canvas);
-    box-sizing: border-box; 
-}
-
-.left-button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-
-    width: auto;
-    height: var(--height-content-button);
-    gap: var(--gap-button-container);
-    margin: 0;
-    padding: 0;
-}
-
-.right-button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-
-    width: auto;
-    height: var(--height-content-button);
-    margin: 0;
-    padding: 0;
-}
-
-.content-play-button, .content-add-button, 
-.content-like-button, .content-dropdown-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: var(--width-content-button);
-    height: var(--width-content-button);
-    padding: 0;
-
-    background-color: transparent;
-    border: none;
-
-    cursor: pointer;
-}
-
-.content-play-button img, .content-add-button img, 
-.content-like-button img, .content-dropdown-button img {
-    width: 100%;
-    height: 100%;
-}
-
-.slider-inner-card-description {
-    padding-left: var(--padding-slider-inner-item-canvas);
-    color: var(--color-font);
 }
