--- a/netflix-clone/src/content/card/card.css
+++ b/netflix-clone/src/content/card/card.css
@@ -136,8 +136,8 @@
     padding: 0;
 }
 
-.content-play-button, .content-add-button, 
-.content-like-button, .content-dropdown-button {
+.content-play-button, .content-wishlist-button, 
+.content-opinion-button, .content-dropdown-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -152,8 +152,12 @@
     cursor: pointer;
 }
 
-.content-play-button img, .content-add-button img, 
-.content-like-button img, .content-dropdown-button img {
+.content-opinion-button {
+    position: relative;
+}
+
+.content-play-button img, .content-wishlist-button img, 
+.content-opinion-button img, .content-dropdown-button img {
     width: 100%;
     height: 100%;
 }
@@ -161,4 +165,53 @@
 .slider-inner-card-description {
     padding-left: var(--padding-slider-inner-item-canvas);
     color: var(--color-font);
+}
+
+.content-opinion-modal-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    position: absolute;
+
+    width: var(--width-content-opinion-modal-container);
+    height: var(--height-content-opinion-modal-container);
+    margin: 0;
+    padding: 0;
+    padding-left: var(--padding-content-opinion-modal-container);
+    padding-right: var(--padding-content-opinion-modal-container);
+    gap: var(--gap-content-opinion-modal-container);
+    box-sizing: border-box;
+
+    background-color: var(--color-background);
+    border-radius: 30%;
+    box-shadow: var(--box-shadow-inner-modal);
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.content-opinion-button:hover .content-opinion-modal-container {
+    opacity: 1;
+    visibility: visible;
+}
+
+.content-dislike-button, .content-like-button, .content-best-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: var(--width-content-button);
+    height: var(--width-content-button);
+    padding: 0;
+
+    background-color: transparent;
+    border: none;
+
+    cursor: pointer;
+}
+
+.content-dislike-button img, .content-like-button img, .content-best-button img {
+    width: 100%;
+    height: 100%;
 }
