--- a/netflix-clone/src/content/card/card.css
+++ b/netflix-clone/src/content/card/card.css
@@ -183,8 +183,8 @@
     gap: var(--gap-content-opinion-modal-container);
     box-sizing: border-box;
 
-    background-color: var(--color-background);
-    border-radius: 30%;
+    background-color: #252525;
+    border-radius: 10em;
     box-shadow: var(--box-shadow-inner-modal);
 
     opacity: 0;
@@ -194,6 +194,7 @@
 .content-opinion-button:hover .content-opinion-modal-container {
     opacity: 1;
     visibility: visible;
+    transition: 0.2s ease-in;
 }
 
 .content-dislike-button, .content-like-button, .content-best-button {
@@ -215,3 +216,49 @@
     width: 100%;
     height: 100%;
 }
+
+.content-dislike-tooltip, .content-like-tooltip, .content-best-tooltip {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    width: 80%;
+    height: 60%;
+    top: -80%;
+    
+    background-color: #e5e5e5;
+    box-sizing: border-box;
+    border-radius: .5em;
+    box-shadow: var(--box-shadow-inner-modal);
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.content-tooltip-text {
+    position: absolute;
+    color: black;
+    font-size: medium;
+}
+
+.content-tooltip-arrow {
+    position: absolute;
+    top: 100%;
+    left: 45%;
+	
+    width: 10px;
+    height: 10px;
+    background-color: #e5e5e5;
+    
+    clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
+}
+
+.content-dislike-button:hover .content-dislike-tooltip, 
+.content-like-button:hover .content-like-tooltip, 
+.content-best-button:hover .content-best-tooltip {
+    opacity: 1;
+    visibility: visible;
+}
+
